--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                 <!-- <script src="./js/Dom/DOM.js" type="module"></script>
                 <script src="./js/Dom/DOM-practise.js" type="module"></script> -->
                 <!-- <script src="./js/Dom/events.js" type="module"></script> -->
-                <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-                 <script src="./js/dash.js" type="module"></script> -->
-                <script type="module" src="./js/observer.js"></script>
+                <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script> -->
+                 <!-- <script src="./js/js-4/dash.js" type="module"></script>
+                <script type="module" src="./js/js-4/observer.js"></script> -->
+                <script type="module" src="./js/js-4/localstorage.js"></script>
+                
                 </html>
