--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="block">
 </div> -->
 
-<ul class="fruit-lisst">
+<!-- <ul class="fruit-lisst">
   <li class="fruits-item">
     <img class="img-fruit" src="https://molbuk.ua/uploads/posts/2021-05/1622105441_2.jpg" alt="mango">
   </li>
@@ -60,7 +60,10 @@
   <li class="fruits-item">
     <img class="img-fruit" src="https://molbuk.ua/uploads/posts/2021-05/1622105282_1.jpg" alt="dragon">
   </li>
-</ul>
+</ul> -->
+
+<p class="timer"></p>
+<button class="btn">stooop</button>
 
    <!-- <script src="./js/Base/vars.js" type="module"></script> -->
    <!-- <script src="./js/Base/types-of-data.js" type="module"></script> -->
@@ -87,6 +90,6 @@
                 <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script> -->
                  <!-- <script src="./js/js-4/dash.js" type="module"></script>
                 <script type="module" src="./js/js-4/observer.js"></script> -->
-                <script type="module" src="./js/js-4/localstorage.js"></script>
-                
+                <!-- <script type="module" src="./js/js-4/localstorage.js"></script> -->
+                <script type="module" src="./js/js-4/timers.js"></script>
                 </html>
